# simple-coder

./: .env.example  .gitignore  Cargo.toml  README.md  SPECS.md
specs/: 01-application-overview.md  02-ai-integration.md  03-file-operations.md  04-user-interface.md  05-data-structures.md  06-security-considerations.md  07-development-requirements.md  08-text-editor-tool.md
src/: main.rs  patch_apply.rs  scan_directory.rs
src/tools/: edit_file.rs  text_editor.rs
