[package]
name = "rust_practix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
similar = "2"
scan_dir = "0.3.3"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
anthropic = "0.0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

[[bin]]
name = "main"
path = "src/main.rs"
